Fix transformer reset button being hidden by image
Summary:
The reset button could be covered or partially covered by a background
image on the graph. This commit sets the reset button's z-index to 1 to
prevent this.

I tried playing around with setting the image's z-index to -1 instead,
but this just resulted in the image not showing.

Test Plan:
add a large background image that covers the reset button.
verify that the reset button is still clickable

Reviewers: alex

Reviewed By: alex

Differential Revision: http://phabricator.khanacademy.org/D5031

--- a/stylesheets/exercise-content-package/perseus.less
+++ b/stylesheets/exercise-content-package/perseus.less
@@ -564,3 +564,12 @@
         top: 140px !important;
     }
 }
+
+
+.perseus-widget-transformer {
+    button {
+        z-index: 1;
+        position: relative;
+    }
+}
+
